test paragraph added

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Tytuł</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
 </head>
 
 <body>
@@ -15,6 +15,10 @@
         </h1>
         <p>
             Testuję działanie platformy GitHub poprzez commit'y, tworzenie repozytoriów.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, soluta ab aspernatur iusto minima fuga
+            iure vel aut sit unde esse ut adipisci maiores aliquid, animi, ratione repudiandae nihil laborum.
         </p>
     </div>
 </body>
